src/test/deca/context/invalid/created/decl_var/decl_bool_eq_float.deca
// Description :
//    test affectation incorrect bool = float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: (3.28) Types incompatibles pour l’affectation

{
boolean a = 0.5; 
//0.5 n'est pas un bool
}